Improve 5+ order UX with confirmation popup and form reset

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                   <option value="2">2</option>
                   <option value="3">3</option>
                   <option value="4">4</option>
+                  <option value="5plus">5+</option>
                 </select>
               </div>
               <div>
@@ -149,6 +150,7 @@
               <label><input type="radio" name="fulfillment_method" value="pickup" checked required /> Pickup in Paxton</label>
               <label><input type="radio" name="fulfillment_method" value="delivery" /> Delivery (within 25 miles of Paxton, IL)</label>
             </fieldset>
+            <p class="small-note" id="fulfillment-contact-note" aria-live="polite"></p>
 
             <div id="delivery-fields" class="delivery-fields" hidden>
               <label for="delivery-address">Delivery street address</label>
