Add Cloudflare Web Analytics script to index.html

--- a/index.html
+++ b/index.html
@@ -249,5 +249,6 @@
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     ></script>
     <script src="script.js"></script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "8f26e62fae5c4f97bddd6606714b7ab3"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
